<resources>
    <string name="app_name">Bubbly2017</string>
    <string name="title_activity_server_setup">ServerSetup</string>
    <string name="spinInstruction">1)Pick Sale amount\n2)Tap Go Sale\n      ---------------------------------->>\nScroll wheel / Type Amount\n0 = Request Balance</string>
    <string name="action_exitapp">Exit App</string>
    <string name="action_settings">Upload Transactions</string>
    <string name="action_wifi_settings">Database Server settings</string>
    <string name="action_showTERMSN">Show POS Serial</string>
    <string name="AppCloseQuestion">Are you sure you want to close application?</string>
    <string name="AppVersion">5.1.5</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="Nothing"></string>
    <string name="networksrch">network searh</string>
    <string name="appwifiopenquestion">Are you sure you want to open,\nwifi page?</string>
    <string name="PayCounter">60</string>
    <string name="register">Register</string>
    <string name="NDS_Title">NSD View</string>
    <string name="deregisterSVC">Deregister</string>
    <string name="DEFIP">11.10.10.2</string>
    <string name="default_IP">11</string>
    <string name="default_IP2">10</string>
    <string name="default_IP3">10</string>
    <string name="default_IP4">2</string>
    <string name="default_port">10042</string>
    <string name="Server_Default_Timeout">5000</string>
    <string name="Send_Svr_Test_MSG">Send Test Message</string>
    <string name="TestServerConnection">Test Connection</string>
    <string name="Server_setting_menu">Server Setup Page</string>
    <string name="GetSaleTotal">Show Sale Totals</string>
    <string name="ClearSaleTotal">Clear Sale Totals</string>
    <string name="GetConfig">GetConfig</string>

    <string name="Server_Test_Message"><PF><TERM>1130011468</TERM><FLAG>T062NNN</FLAG><PURSE>P1</PURSE><SER0>15E181AE</SER0><SER1></SER1><ID0>00033</ID0><ID1></ID1><LP>00000000000000</LP><DB>|197.242.146.179|payfare|mautran|payfare|p4yf4r3|</DB><DATA>00152609210715000000000000250000000000000000000000250000131843</DATA></PF></string>
    <string name="discover">Discover</string>
    <string name="connect">Connect</string>
    <string name="send">send</string>
    <string name="pay">Pay</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Ok</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Server_Settings_menu_action_settings">Save and Exit</string>
    <string name="Server_Settings_menu_action_settings_no_Save">Exit without Save</string>
    <string name="title">title</string>

    <string name="title_activity_display_message">My Display Message</string>
    <string name="hello_world"></string>
    <string name="TBA">TBA by button from last screen</string>
    <string name="Back">Return to Main</string>
    <string name="action_search">Search..</string>
    <string name="action_settings2">Settings</string>
    <string name="Keyb1">1</string>
    <string name="Keyb2">2</string>
    <string name="Keyb3">3</string>
    <string name="Keyb4">4</string>
    <string name="Keyb5">5</string>
    <string name="Keyb6">6</string>
    <string name="Keyb7">7</string>
    <string name="Keyb8">8</string>
    <string name="Keyb9">9</string>
    <string name="Keyb0">0</string>
    <string name="KeybBACKSpace">Back</string>
    <string name="KeybCANCEL">Cancel</string>
    <string name="KeybOK">OK</string>
    <string name="KeybF1">F1</string>
    <string name="KeybStar">*</string>
    <string name="Keybhash">#</string>
    <string name="PayfareServerDefaults">PayfareServerDefaults</string>
    <string name="MerchantSaleTotals">MerchantSaleTotals</string>
    <string name="PosConfigData">PosConfigData</string>
    <string name="defaultcountervalue">0</string>
    <string name="default_MerchantName">Sale Merchant</string>
    <string name="Default_Sale_Value">Current Sale Value : 0</string>
    <string name="default_ButtonText">Balance Enquiry</string>
    <string name="todo">TODO</string>
</resources>
