<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:background="@drawable/bubback60png"
    tools:context="bubbly2017.payfare.com.bubbly2017.MainActivity">



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMerchantDisplay"
                android:layout_width="wrap_content"
                android:layout_height="50dp"

                android:layout_marginStart="55dp"
                android:text="@string/default_MerchantName"
                android:textColor="@color/OkCancelRed"
                android:textSize="30sp" />


        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:layout_marginBottom="31dp"

                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/spinInstruction"
                android:textColor="@color/STDwhite"
                android:textSize="20sp" />

            <NumberPicker
                android:id="@+id/numberPicker1"
                style="@style/numberpickerstyle"
                android:layout_width="50dp"
                android:divider="@color/OkCancelRed"

                android:layout_height="150dp"
                android:background="@color/SBSA_white"
                android:solidColor="@color/fullblack"
                android:textSize="15sp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="15dp"

                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:text="@string/Default_Sale_Value"
                android:textColor="@color/STDwhite"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnGoSale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/bmi_button"
                android:text="@string/default_ButtonText"
                android:textColor="@color/fullblack"
                android:textSize="20sp">

            </Button>
        </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="20dp"
            android:minWidth="150dp"
            android:progress="1" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="14dp"


                android:src="@drawable/paywave_transparent"
                android:visibility="invisible" android:contentDescription="TODO" />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="100dp"

                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"

                android:gravity="right"
                android:text="@string/defaultcountervalue"
                android:textColor="@color/OkCancelRed"
                android:textSize="75sp"
                android:visibility="invisible" />


        </TableRow>
    </TableLayout>

</LinearLayout>
